<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity_ChangeGoal">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text4"
            android:id="@+id/textView4"
            android:layout_marginStart="40dp"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="20dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/button1"
            android:orientation="vertical"
            android:layout_toEndOf="@id/textView4"
            android:layout_marginTop="70dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:id="@+id/radioGroup1">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:text="@string/text5"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:text="@string/text6"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:text="@string/text7"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text8"
            android:id="@+id/textView5"
            android:layout_below="@id/radioGroup1"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="70dp"
            android:id="@+id/et3"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/textView5"
            android:layout_below="@id/radioGroup1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text9"
            android:id="@+id/textView6"
            android:layout_below="@id/textView5"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="70dp"
            android:id="@+id/et4"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/textView6"
            android:layout_below="@id/textView5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text10"
            android:id="@+id/textView7"
            android:layout_below="@id/textView6"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:layout_width="70dp"
            android:id="@+id/et5"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/textView7"
            android:layout_below="@id/textView6"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/saveButton"
            android:layout_below="@id/et5"
            android:layout_alignStart="@id/et5"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/drawer"
        app:itemIconTint="@color/colorAccent"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>